ConsultingHub/force-app/main/default/objects/ia_Engagement_Asset__c/ia_Engagement_Asset__c.object-meta.xml
<CustomObject>
    <description>Engagement Type Asset used during an Engagement.</description>
    <label>Engagement Asset</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>EA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>