ConsultingHub/force-app/main/default/objects/ia_Engagement_Asset__c/fields/Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location__c</fullName>
    <formula>IA_Asset__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Location</label>
    <type>Text</type>
</CustomField>