ConsultingHub/force-app/main/default/objects/ia_Engagement_Asset__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>IA_Asset__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>