ConsultingHub/force-app/main/default/objects/ia_Engagement_Asset__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <referenceTo>ia_Engagement__c</referenceTo>
    <relationshipLabel>Assets Used</relationshipLabel>
    <relationshipName>Engagement_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>