ConsultingHub/force-app/main/default/objects/ia_Engagement_Asset__c/fields/IA_Asset__c.field-meta.xml
<CustomField>
    <fullName>IA_Asset__c</fullName>
    <label>IA Asset</label>
    <referenceTo>ia_Asset__c</referenceTo>
    <relationshipLabel>Engagement Assets</relationshipLabel>
    <relationshipName>Engagement_Assets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>