ConsultingHub/force-app/main/default/objects/ia_Engagement_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Engagement__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>